--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -22,7 +22,6 @@
 	year = {2017},
 	langid = {english}
 }
-% Third Chapter
 @book{Renfro_2009,
 	location = {Berlin, Heidelberg},
 	title = {The Practice of Econometric Theory},
@@ -202,7 +201,7 @@
 			  Saba, Elliot and
 			  Baldassari, Antoine and
 			  Noack, Andreas},
-	title = {MixedModels.jl},
+	title = {{MixedModels.jl}},
 	year = 2019,
 	url = {https://github.com/dmbates/MixedModels.jl},
 	doi = {10.5281/zenodo.2592615}
@@ -268,4 +267,167 @@
  title = {Estimating the Economic Model of Crime with Panel Data},
  volume = {76},
  year = {1994}
+}
+@misc{GLM.jl,
+  author = {Bates, Douglas and
+            Kornblith, Simon and
+            Noack, Andreas and
+            Borregaard, Michael Krabbe and
+            Bouchet-Valat, Milan and
+            White, John Myles and
+            Arslan, Alex and
+            Kleinschmidt, Dave and
+            Lendle, Sam and
+            Mogensen, Patrick Kofod and
+            Dunning, Iain and
+            Aluthge, Dilum and
+            Bastide, Paul and
+            Santiago Calderón, José Bayoán and
+            Quinn, Jacob and
+            Lynch, Galen and
+            DuBois, Chris and
+            Setzler, Bradley and
+            Born, Benjamin and
+            Yu, Yichao and
+            Kelman, Tony and
+            Lienart, Thibaut and
+            Herikstad, Roger and
+            Grechkin, Maxim and
+            Hein, Lewis and
+            Adenbaum, Jacob and
+            Ngo, Hung Q. and
+            Lin, Dahua},
+  title        = {{GLM.jl}},
+  year         = 2012,
+  doi          = {10.5281/zenodo.3376013},
+  url          = {https://github.com/JuliaStats/GLM.jl}
+}
+@misc{StatsModels.jl,
+  author       = {Kleinschmidt, Dave and
+                  White, John Myles and
+                  Bouchet-Valat, Milan and
+                  Bates, Douglas and
+                  Garborg, Sean and
+                  DuBois, Chris and
+                  Noack, Andreas and
+                  Kornblith, Simon and
+                  Arslan, Alex and
+                  Short, Tom and
+                  Harris, Harlan and
+                  White, Lyndon and
+                  Santiago Calderón, José Bayoán and
+                  Gomez, Matthieu and
+                  Stephen, Gord and
+                  Quinn, Jacob and
+                  Borregaard, Michael Krabbe and
+                  Manela, Asaf and
+                  Byrne, Simon and
+                  Vertechi, Pietro and
+                  Bittarello, Luca and
+                  Ekre, Fredrik and
+                  Saba, Elliot and
+                  Aluthge, Dilum and
+                  Anthoff, David and
+                  Hayden, Andy and
+                  Labadorf, Adam},
+  title        = {{StatsModels.jl}},
+  year         = 2016,
+  doi          = {10.5281/zenodo.3376171},
+  url          = {https://github.com/JuliaStats/StatsModels.jl}
+}
+@misc{StatsBase.jl,
+  author       = {Lin, Dahua and
+                  Noack, Andreas and
+                  White, John Myles and
+                  Arslan, Alex and
+                  Bouchet-Valat, Milan and
+                  Finnegan, Rory and
+                  Kornblith, Simon and
+                  Byrne, Simon and
+                  Bates, Douglas and
+                  Santiago Calderón, José Bayoán and
+                  Yu, Yichao and
+                  Quinn, Jacob and
+                  Fabisch, Alexander and
+                  Schulz, Oliver and
+                  Dunning, Iain and
+                  Widmann, David and
+                  Innes, Mike J and
+                  Holters, Martin and
+                  Schauer, Moritz and
+                  Gomez, Matthieu and
+                  Garborg, Sean and
+                  Besançon, Mathieu and
+                  Ekre, Fredrik and
+                  Rauber, Jonas and
+                  Bezanson, Jeff and
+                  Peterson, Jack and
+                  Kamiński, Bogumił and
+                  Arthur, Ben and
+                  Hayden, Andy},
+  title        = {{StatsBase.jl}},
+  year         = 2012,
+  doi          = {10.5281/zenodo.3376169},
+  url          = {https://github.com/JuliaStats/StatsBase.jl}
+}
+@misc{Tables.jl,
+  author       = {Quinn, Jacob and
+                  Anthoff, David and
+                  Bouchet-Valat, Milan and
+                  Papp, Tamas K. and
+                  Vertechi, Pietro and
+                  Santiago Calderón, José Bayoán and
+                  Day, Josh and
+                  Dunn, Jack and
+                  Lin, Iblis and
+                  Kalybek, Erjan and
+                  Davies, Eric and
+                  Kamiński, Bogumił and
+                  Ferris, Andy},
+  title        = {{Tables.jl}},
+  year         = 2018,
+  doi          = {10.5281/zenodo.3376179},
+  url          = {https://github.com/JuliaData/Tables.jl}
+}
+@misc{DataFrames.jl,
+  author       = {White, John Myles and
+                  Bouchet-Valat, Milan and
+                  Garborg, Sean and
+                  Kamiński, Bogumił and
+                  Kornblith, Simon and
+                  Quinn, Jacob and
+                  Stukalov, Alexey and
+                  Bates, Douglas and
+                  Short, Tom and
+                  Harris, Harlan and
+                  DuBois, Chris and
+                  Squire, Kevin and
+                  Arslan, Alex and
+                  Kleinschmidt, Dave and
+                  Anthoff, David and
+                  Noack, Andreas and
+                  Shah, Viral B. and
+                  Mellnik, Alex and
+                  Mohapatra, Tanmay and
+                  Karpinski, Stefan and
+                  Lin, Dahua and
+                  Finnegan, Rory and
+                  Oswald, Florian and
+                  Jones, Daniel C.},
+  title        = {{DataFrames.jl}},
+  year         = 2012,
+  doi          = {10.5281/zenodo.3376177},
+  url          = {https://github.com/JuliaData/DataFrames.jl}
+}
+@misc{CovarianceMatrices.jl,
+  author       = {Ragusa, Giuseppe},
+  title        = {{CovarianceMatrices.jl}},
+  year         = 2014,
+  url          = {https://github.com/gragusa/CovarianceMatrices.jl}
+}
+@misc{FixedEffectModels.jl,
+  author       = {Gomez, Matthieu},
+  title        = {{FixedEffectModels.jl}},
+  year         = 2015,
+  url          = {https://github.com/matthieugomez/FixedEffectModels.jl}
 }
