--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -188,7 +188,7 @@
 	pages = {1--17},
 	doi = {10.18637/jss.v011.i10},
 }
-@misc{LinearMixedModels,
+@misc{MixedModels.jl,
 	author = {Bates, Douglas  and
 			  Santiago Calderón, José Bayoán and
 			  Kleinschmidt, Dave and
