Updates from Overleaf

--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -189,22 +189,22 @@
 	doi = {10.18637/jss.v011.i10},
 }
 @misc{MixedModels.jl,
-	author = {Bates, Douglas  and
-			  Santiago Calderón, José Bayoán and
-			  Kleinschmidt, Dave and
-			  Kelman, Tony and
-			  Babayan, Simon and
-			  Mogensen, Patrick Kofod and
-			  Piibeleht, Morten and
-			  Bouchet-Valat, Milan and
-			  Hatherly, Michael and
-			  Saba, Elliot and
-			  Baldassari, Antoine and
-			  Noack, Andreas},
+    author = {Bates, Douglas  and
+              Santiago Calderón, José Bayoán and
+              Kleinschmidt, Dave and
+	          Kelman, Tony and
+	          Babayan, Simon and
+	          Mogensen, Patrick Kofod and
+	          Piibeleht, Morten and
+	          Bouchet-Valat, Milan and
+	          Hatherly, Michael and
+	          Saba, Elliot and
+	          Baldassari, Antoine and
+	          Noack, Andreas},
 	title = {{MixedModels.jl}},
-	year = 2019,
+	year = 2013,
 	url = {https://github.com/dmbates/MixedModels.jl},
-	doi = {10.5281/zenodo.2592615}
+	doi = {10.5281/zenodo.596435}
 }
 @Manual{Ecdat,
 	title = {Ecdat: Data Sets for Econometrics},
